# PeerSwarm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  LICENSE  README.md  backend.err  docker-compose.yml  git_commands.ps1  pyproject.toml  requirements-vercel.txt  requirements.txt  run_git.bat  run_tests.bat  run_tests.ps1  run_tests.sh  run_tests2.bat  run_tests3.ps1  run_tests_final.bat  streamlit.err  test_git.bat  vercel.json
.github/workflows/: ci-cd.yml  ci.yml
.streamlit/: config.toml
api/: index.py
k8s/base/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/prometheus/rules/: alerts.yml
src/: config.py  main.py
src/api/: __init__.py  auth.py  error_handlers.py  rate_limiter.py  routes.py  security_headers.py  server.py  websocket_manager.py
src/backend/: groq_client.py  main.py  models.py  supabase_client.py
src/crew/: __init__.py  crew.py
src/crew/agents/: __init__.py  analyst.py  base.py  critic.py  planner.py  researcher_academic.py  researcher_kb.py  researcher_web.py  writer.py
src/crew/tasks/: __init__.py  analysis_task.py  critique_task.py  planning_task.py  research_tasks.py  revision_task.py  writing_task.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/flows/: __init__.py  research_flow.py  state.py
src/memory/: __init__.py  history.py  knowledge_graph.py  vector_store.py
src/models/: __init__.py  api.py  memory.py  quality.py  research.py
src/tools/: __init__.py  arxiv_tool.py  calculator.py  citation_tool.py  knowledge_base.py  pdf_reader.py  self_evaluation.py  web_search.py
src/ui/: __init__.py  streamlit_app.py
src/ui/assets/css/: design-tokens.css
src/ui/components/: api_client.py  history.py  job_status.py  new_research.py  results.py  styling.py  system_health.py
src/utils/: __init__.py  cost_tracker.py  exporters.py  logger.py  metrics.py  resilience.py  tracing.py
supabase/: config.toml
supabase/functions/research/: index.ts
supabase/migrations/: 001_schema.sql  002_rls_policies.sql
tests/: conftest.py
tests/evaluation/: __init__.py
tests/integration/: test_docker_services.py  test_flow_integration.py
tests/unit/: test_agents_llm.py  test_auth.py  test_calculator_tool.py  test_citation_tool.py  test_cost_tracker.py  test_evaluation_evaluator.py  test_evaluation_metrics.py  test_flow_state.py  test_main.py  test_memory.py  test_metrics.py  test_models_memory_api.py  test_models_quality.py  test_models_research.py  test_rate_limiter.py  test_research_flow.py  test_security.py  test_server.py  test_tools.py  test_utils.py  test_websocket_manager.py
